# hydra_ros

./: .gitmodules  README.md  package.xml
hydra_bringup/: CMakeLists.txt  package.xml
hydra_bringup/config/: positioner_controllers.yaml
hydra_bringup/launch/: hydra.rviz  hydra_bringup.launch  hydra_positioner.launch  hydra_positioner.launch.py  hydra_robot.launch  hydra_robot.launch.py  hydra_system_sim.launch  hydra_system_sim.launch.py  hydra_visualization.launch  hydra_visualization.launch.py  hydra_visualize.launch  moveit_planning.launch  moveit_planning.launch.py
hydra_bringup/rviz/: hydra.rviz
hydra_control/: CMakeLists.txt  hydra_control_plugins.xml  package.xml
hydra_control/config/: default_hydra_controllers.yaml  hydra_controllers.yaml  hydra_hardware.yaml  joint_state_controllers.yaml  positioner_trajectory_controllers.yaml  velocity_controllers.yaml  velocity_trajectory_controllers.yaml
hydra_control/include/hydra_control/: positioner_state_controller.h
hydra_control/launch/: hydra_control.launch  hydra_sim_control.launch
hydra_control/src/: positioner_state_controller.cpp
hydra_controllers/: CMakeLists.txt  hydra_controllers_plugin.xml  package.xml
hydra_controllers/cfg/: hydra_param.cfg
hydra_controllers/include/hydra_controllers/: cached_controller_data.h  control_methods.h  hydra_controller.h  robot_data_container.h
hydra_controllers/src/: control_methods.cpp  hydra_controller.cpp
hydra_controllers/srv/: SwitchCoordination.srv
hydra_controllers/test/: hydra_controller_test.py
hydra_description/: CMakeLists.txt  README.md  package.xml
hydra_description/launch/: hydra_description.launch
hydra_description/meshes/: typhoon_extruder.dae
hydra_description/meshes/collision/: hydra_positioner_collision.stl  optical_table.stl  positioner_stand_collision.stl  rotary_table_collision.stl  typhoon_extruder_collision.stl  za_pedestal_collision.stl
hydra_description/meshes/visual/: optical_table.dae  typhoon_extruder.dae
hydra_description/rviz/: hydra_model_viewer.rviz
hydra_description/urdf/: hydra.xacro  hydra_macro.xacro  positioner_macro.xacro  za_typhoon.xacro  za_typhoon_macro.xacro
hydra_description/urdf/positioner/: positioner.xacro  positioner_macro.xacro
hydra_description/urdf/robots/: za_pedestal.xacro  za_pedestal_macro.xacro  za_tool.xacro  za_tool_macro.xacro
hydra_description/urdf/tools/: typhoon_extruder_macro.xacro
hydra_gazebo/: CMakeLists.txt  hydra_hw_sim_plugin.xml  package.xml
hydra_gazebo/config/: hydra_hw_sim.yaml  sim_controllers.yaml  za_hw_sim.yaml
hydra_gazebo/include/hydra_gazebo/: hydra_hw_sim.h  model_kdl.h  positioner_hw_sim.h
hydra_gazebo/launch/: hydra.launch
hydra_gazebo/src/: hydra_hw_sim.cpp  model_kdl.cpp  positioner_hw_sim.cpp
hydra_hardware/: CMakeLists.txt  package.xml
hydra_hardware/config/: positioner_hardware.yaml
hydra_hardware/launch/: positioner_hardware.launch
hydra_hw/: CMakeLists.txt  package.xml
hydra_hw/include/hydra_hw/: hydra_model_interface.h  model_base.h  positioner_state.h  positioner_state_interface.h
hydra_ikfast_plugin/hydra_ikfast_plugin/: CMakeLists.txt  package.xml
hydra_ikfast_plugin/hydra_rob1_planning_group_ikfast_plugin/: CMakeLists.txt  hydra_rob1_planning_group_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
hydra_ikfast_plugin/hydra_rob1_planning_group_ikfast_plugin/src/: hydra_rob1_planning_group_ikfast_moveit_plugin.cpp  hydra_rob1_planning_group_ikfast_solver.cpp
hydra_ikfast_plugin/hydra_rob2_planning_group_ikfast_plugin/: CMakeLists.txt  hydra_rob2_planning_group_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
hydra_ikfast_plugin/hydra_rob2_planning_group_ikfast_plugin/src/: hydra_rob2_planning_group_ikfast_moveit_plugin.cpp  hydra_rob2_planning_group_ikfast_solver.cpp
hydra_ikfast_plugin/hydra_rob3_planning_group_ikfast_plugin/: CMakeLists.txt  hydra_rob3_planning_group_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
hydra_ikfast_plugin/hydra_rob3_planning_group_ikfast_plugin/src/: hydra_rob3_planning_group_ikfast_moveit_plugin.cpp  hydra_rob3_planning_group_ikfast_solver.cpp
hydra_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hydra_moveit_config/config/: controllers.yaml  fake_controllers.yaml  hydra.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
hydra_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo.launch.py  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hydra_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  rsp.launch.py  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  setup_assistant.launch.py  simple_moveit_controller_manager.launch.xml  spawn_controllers.launch.py  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
hydra_mrmf_config/: CMakeLists.txt  package.xml
hydra_mrmf_config/launch/: mrmf_group.launch
hydra_ros/: CMakeLists.txt  package.xml
launch/: hydra_description.launch
urdf/: hydra.xacro  positioner.xacro  positioner_macro.xacro  za_typhoon_macro.xacro
