<?xml version="1.0"?>
<package format="2">
  <name>hydra_description</name>
  <version>0.0.0</version>
  <description>Hydra URDF files</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- Add `check_urdf` tool for verification -->
  <buildtool_depend>liburdfdom-tools</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <build_export_depend>xacro</build_export_depend>

</package>
