<?xml version="1.0"?>
<package format="3">
  <name>hydra_bringup</name>
  <version>0.2.0</version>
  <description> hydra_bringup provides a roslaunch for commonly used files with the Hydra system </description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hydra_moveit_config</exec_depend>
  <exec_depend>za_description</exec_depend>
  <exec_depend>za_robot</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
