<?xml version="1.0"?>
<package format="2">
  <name>hydra_hardware</name>
  <version>0.1.0</version>
  <description>Hydra multi-robot hardware configuration</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>Apache2</license>

  <depend>rospy</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <exec_depend>controller_manager</exec_depend> -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
