<?xml version="1.0"?>
<package format="2">
  <name>hydra_hw</name>
  <version>0.1.0</version>
  <description> hydra_control provides a ros_control interface for the hydra system </description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>
  <depend>za_hw</depend>

  <exec_depend>za_description</exec_depend>

</package>