<package>

  <name>hydra_mrmf_config</name>
  <version>0.3.0</version>
  <description>
     A package with all the configuration and launch files for using the hydra system with the Multi-robot Manufacturing
     Framework (MRMF)
  </description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>hydra_moveit_config</run_depend>
</package>
