<?xml version="1.0"?>
<package format="3">
	<name>hydra_ros</name>
	<version>0.2.0</version>
	<description>ROS2 metapackage for hydra_ros</description>
	<maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
	<license>Apache2</license>

	<author>Alex Arbogast</author>
	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>hydra_bringup</exec_depend>
	<exec_depend>hydra_description</exec_depend>
	<exec_depend>hydra_hardware</exec_depend>
	<exec_depend>hydra_moveit_config</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
