<?xml version="1.0"?>
<package format="2">
	<name>hydra_ikfast_plugin</name>
	<version>0.1.0</version>
	<description>Metapackage for hydra_ikfast_plugin</description>
	<maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
	<license>BSD</license>

	<author>Alex Arbogast</author>
	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>hydra_rob1_planning_group_ikfast_plugin</exec_depend>
	<exec_depend>hydra_rob2_planning_group_ikfast_plugin</exec_depend>
	<exec_depend>hydra_rob3_planning_group_ikfast_plugin</exec_depend>

	<export>
		<metapackage/>
	</export>
</package>