<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>hydra_rob2_planning_group_ikfast_plugin</name>
  <version>0.0.0</version>
  <description>IKFast plugin for hydra</description>
  <license>BSD</license>
  <maintainer email="alex@todo.todo">alex</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <export>
    <moveit_core plugin="${prefix}/hydra_rob2_planning_group_moveit_ikfast_plugin_description.xml"/>
  </export>
</package>
